--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,9 @@ platform = espressif8266@1.7.0
 board = esp01_1m
 framework = arduino
 build_flags = -Wl,-Tesp8266.flash.1m0.ld
+
+[env:esp01_1m_170_eagle]
+platform = espressif8266@1.7.0
+board = esp01_1m
+framework = arduino
+build_flags = -Wl,-Teagle.flash.1m0.ld
