--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m_150]
-platform = espressif8266@1.5.0
-board = esp01_1m
-framework = arduino
-build_flags = -Wl,-Tesp8266.flash.1m0.ld
-
-[env:esp01_1m_160]
-platform = espressif8266@1.6.0
-board = esp01_1m
-framework = arduino
-build_flags = -Wl,-Tesp8266.flash.1m0.ld
-
-[env:esp01_1m_170]
+[env:esp01_1m_170_proj]
 platform = espressif8266@1.7.0
 board = esp01_1m
 framework = arduino
@@ -28,6 +16,12 @@ build_flags = -Wl,-Tesp8266.flash.1m0.ld
 
 [env:esp01_1m_170_eagle]
 platform = espressif8266@1.7.0
+board = esp01_1m
+framework = arduino
+build_flags = -Wl,-Teagle.flash.1m512.ld
+
+[env:esp01_1m_stage_eagle]
+platform = https://github.com/platformio/platform-espressif8266#feature/stage
 board = esp01_1m
 framework = arduino
 build_flags = -Wl,-Teagle.flash.1m0.ld
